--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -33,7 +33,8 @@
                 new PizzaSpecial { Name = "Margherita", BasePrice =  9.99M, Description = "Traditional Italian pizza with tomatoes and basil", ImageUrl="img/pizzas/margherita.jpg"},
                 new PizzaSpecial { Name = "Basic Cheese Pizza", BasePrice =  11.99M, Description = "It's cheesy and delicious. Why wouldn't you want one?", ImageUrl="img/pizzas/cheese.jpg"},
                 new PizzaSpecial { Name = "Classic pepperoni", BasePrice =  10.5M, Description = "It's the pizza you grew up with, but Blazing hot!", ImageUrl="img/pizzas/pepperoni.jpg" },
-                new PizzaSpecial { Name = "Bjørnar puter", BasePrice = 10.99M, Description = "Fløffy og god!!! :) ", ImageUrl = "img/pizzas/puter.jpg"}
+                new PizzaSpecial { Name = "Bjørnar puter", BasePrice = 10.99M, Description = "Fløffy og god!!! :) ", ImageUrl = "img/pizzas/puter.jpg"},
+                new PizzaSpecial { Name = "Furtebu", BasePrice = 10.99M, Description = "Bu!!! :) ", ImageUrl = "img/pizzas/render159.bmp"}
             });
         }
 
